bk_ida/gccida/c2/mark_used_regs
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4139:4: error: expected ';' after expression
rtx v16; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4139:5: error: use of undeclared identifier 'v16'
rtx v16; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4140:6: error: use of undeclared identifier 'v17'
rtx *v17; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4144:4: error: expected ';' after expression
rtx v21; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4144:5: error: use of undeclared identifier 'v21'
rtx v21; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4145:4: error: expected ';' after expression
rtx v22; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4145:5: error: use of undeclared identifier 'v22'
rtx v22; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4146:6: error: use of undeclared identifier 'v23'
rtx *v23; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4153:6: error: use of undeclared identifier 'v30'; did you mean 'v20'?
rtx *v30; // rbx 
     ^~~
     v20
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4143:9: note: 'v20' declared here
rtunion v20; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4153:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtunion' (aka 'union rtunion_def'))
rtx *v30; // rbx 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4155:4: error: expected ';' after expression
rtx v32; // [rsp+8h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4155:5: error: use of undeclared identifier 'v32'; did you mean 'v12'?
rtx v32; // [rsp+8h] [rbp-60h] 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4135:5: note: 'v12' declared here
int v12; // eax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4156:4: error: expected ';' after expression
rtx v33; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4156:5: error: use of undeclared identifier 'v33'; did you mean 'v13'?
rtx v33; // [rsp+10h] [rbp-58h] 
    ^~~
    v13
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4136:5: note: 'v13' declared here
int v13; // r8d 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4158:4: error: expected ';' after expression
rtx v35; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4158:5: error: use of undeclared identifier 'v35'
rtx v35; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4159:6: error: use of undeclared identifier 'listp'
rtx *listp; // [rsp+18h] [rbp-50h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4167:1: error: use of undeclared identifier 'listp'
listp = &pbi->mem_set_list; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/flow.c:4168:1: error: use of undeclared identifier 'v32'
v32 = insn; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_used_regs/src/obj/flow.o] Error 1
